[sharing] Add more dots
Rewrite box-shadows to real blocks and change animation accordingly.
Make it blinking from left to right.
Also add compiled version.

--- a/svg/sharing/index.html
+++ b/svg/sharing/index.html
@@ -14,6 +14,10 @@
           c17,0,31,14,31,31V94z"/>
       </svg>
     </div>
+    <div class="dot dot1"></div>
+    <div class="dot dot2"></div>
+    <div class="dot dot3"></div>
+    <div class="dot dot4"></div>
     <div class="band to">
       <svg version="1.1" width="30" viewBox="0 0 202 486" xml:space="preserve">
         <path class="st0" d="M154,31V0H48v32C21,34,0,57,0,84v319c0,27,21,50,48,52v32h105v-32c27-03,48-25,48-52V84
