--- a/svg/sharing/index.html
+++ b/svg/sharing/index.html
@@ -8,8 +8,8 @@
 <body>
   <div class="sharing">
     <div class="band from">
-      <svg version="1.1" width="30" viewBox="0 0 202 486" xml:space="preserve">
-        <path class="st0" d="M154,31V0H48v32C21,34,0,57,0,84v319c0,27,21,50,48,52v32h105v-32c27-03,48-25,48-52V84
+      <svg width="30" viewBox="0 0 202 486">
+        <path d="M154,31V0H48v32C21,34,0,57,0,84v319c0,27,21,50,48,52v32h105v-32c27-03,48-25,48-52V84
           C202,56,181,34,154,31z M180,94v308c0,17-14,31-31,31H53c-17,0-31-14-31-31V94v-10c0-17,14-31,31-31h96
           c17,0,31,14,31,31V94z"/>
       </svg>
@@ -19,8 +19,8 @@
     <div class="dot dot3"></div>
     <div class="dot dot4"></div>
     <div class="band to">
-      <svg version="1.1" width="30" viewBox="0 0 202 486" xml:space="preserve">
-        <path class="st0" d="M154,31V0H48v32C21,34,0,57,0,84v319c0,27,21,50,48,52v32h105v-32c27-03,48-25,48-52V84
+      <svg width="30" viewBox="0 0 202 486">
+        <path d="M154,31V0H48v32C21,34,0,57,0,84v319c0,27,21,50,48,52v32h105v-32c27-03,48-25,48-52V84
           C202,56,181,34,154,31z M180,94v308c0,17-14,31-31,31H53c-17,0-31-14-31-31V94v-10c0-17,14-31,31-31h96
           c17,0,31,14,31,31V94z"/>
       </svg>
