[sharing] Add ok sign to the end
Another svg with fade and zoom in animation.

--- a/svg/sharing/index.html
+++ b/svg/sharing/index.html
@@ -18,6 +18,13 @@
     <div class="dot dot2"></div>
     <div class="dot dot3"></div>
     <div class="dot dot4"></div>
+    <div class="ok">
+      <svg width="10" viewBox="0 0 900 760">
+        <path d="M900,104C900,46,854,0,796,0c-32,0-61,15-81,38l0,0l-374,460L180,324l0,0c-19-21-46-33-76-33
+          C46,290,0,337,0,394c0,27,11,52,28,70l0,0L270,727l0,0c19,21,46,33,76,33c33,0,61-15,81-38l0,0l450-553l0,0
+          C891,151,900,129,900,104z"/>
+      </svg>
+    </div>
     <div class="band to">
       <svg width="30" viewBox="0 0 202 486">
         <path d="M154,31V0H48v32C21,34,0,57,0,84v319c0,27,21,50,48,52v32h105v-32c27-03,48-25,48-52V84
