[fitness] Add simple styles and hover transition
SCSS + compiled CSS. Simple reaction on hover.

--- a/svg/fitness/index.html
+++ b/svg/fitness/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Fitness</title>
+  <link rel="stylesheet" href="fitness.css">
 </head>
 <body>
   <div class="fitness">
@@ -35,7 +36,7 @@
     </div>
     <div class="info">
       <div class="speed">
-        <span class="speed1">6</span><span class="speed2">7</span>mph
+        <span class="speed1">6</span><span class="speed2">7</span><span class="mph">mph</span>
       </div>
       <div class="heart">
         <svg width="20" viewBox="0 0 137 120">
@@ -46,7 +47,7 @@
         </svg>
       </div>
       <div class="dist">
-        8235
+        <span class="digits">8235</span>
       </div>
     </div>
   </div>
