--- a/svg/fitness/index.html
+++ b/svg/fitness/index.html
@@ -47,7 +47,7 @@
         </svg>
       </div>
       <div class="dist">
-        <span class="digits">8235</span>
+        <span class="digits">82<span class="digit">0 1 2 3 4 5 6 7 8 9</span><span class="digit">0 1 2 3 4 5 6 7 8 9</span></span>
       </div>
     </div>
   </div>
