[pay] Inline svg to scss and tidy the code
Move signal arcs/waves to scss via sass-svg inliner.
Move blocks into `.pay` "namespace", add some comments.

--- a/svg/pay/index.html
+++ b/svg/pay/index.html
@@ -7,23 +7,10 @@
 </head>
 <body>
   <div class="pay">
-    <div class="band"></div>
     <div class="card">
-      <div class="signal signal1">
-        <svg width="200" viewBox="0 0 200 130">
-          <path d="M 40 50 a 21 21 0 0 0 0 30 M 160 50 a 21 21 0 0 1 0 30" />
-        </svg>
-      </div>
-      <div class="signal signal2">
-        <svg width="200" viewBox="0 0 200 130">
-          <path d="M 30 40 a 35 35 0 0 0 0 50 M 170 40 a 35 35 0 0 1 0 50" />
-        </svg>
-      </div>
-      <div class="signal signal3">
-        <svg width="200" viewBox="0 0 200 130">
-          <path d="M 20 30 a 50 50 0 0 0 0 70 M 180 30 a 50 50 0 0 1 0 70" />
-        </svg>
-      </div>
+      <div class="signal signal1"></div>
+      <div class="signal signal2"></div>
+      <div class="signal signal3"></div>
     </div>
   </div>
 </body>
