--- a/svg/home/index.html
+++ b/svg/home/index.html
@@ -7,37 +7,10 @@
 </head>
 <body>
   <div class="home">
-    <div class="info">
-      <svg width="20" viewBox="0 0 16 21">
-        <path d="M8,10v0,8" style="stroke: #333; stroke-width: 4px; stroke-linecap: round;"/>
-        <circle cx="8" cy="3" r="2"/>
-      </svg>
-    </div>
-    <div class="bulb">
-      <svg width="20" viewBox="0 0 600 900">
-        <path d="M583,189C543,74,428,0,302,0c-12,0-23,1-35,2C187,10,120,44,68,100c-86,94-86,233-25,332
-          c19,32,42,61,64,91c27,39,43,82,43,128c0,20,19,37,43,37c13,0,180,1,207,1h3c28,0,46-17,46-42
-          c0-6,1-12,1-18c4-43,23-82,49-117c17-23,35-45,50-70C601,362,614,277,583,189L583,189z M492,405
-          c-9,16-21,31-34,48l-14,19c-37,51-57,98-62,148H218c-6-48-24-94-55-136c-7-11-15-21-23-31
-          c-14-19-28-38-39-57c-40-66-52-172,17-249C160,102,211,76,274,70c9-1,17-2,27-2c98,0,187,59,217,142
-          C542,278,534,342,492,405L492,405z M414,735H187c-17,0-32,13-32,29c0,17,15,30,32,30h227c17,0,32-13,32-30
-          C446,749,432,735,414,735L414,735z M312,899c41-5,73-25,95-58H194C216,874,265,905,312,899z"/>
-      </svg>
-    </div>
-    <div class="eye">
-      <svg width="20" viewBox="0 0 499 340">
-        <path d="M250,105c-36,0-65,29-65,65c0,36,29,65,65,65c36,0,65-29,65-65C315,134,286,105,250,105z"/>
-        <path d="M494,160C444,61,350,0,250,0S55,61,5,160L0,170l5,9c50,99,144,160,245,160s194-61,245-160l5-9L494,160z
-          M250,298c-82,0-158-49-203-128C91,91,168,42,250,42S408,91,452,170C408,249,331,298,250,298z"/>
-      </svg>
-    </div>
-    <div class="unlock">
-      <svg width="20" viewBox="0 0 16 21">
-        <path d="M14,7V6c0-3.4-2.6-6-6-6C5.2,0,2.7,2,2.1,4.8l2,0.4C4.5,3.3,6.1,2,8,2c2.2,0,4,1.8,4,4v1H2C0.9,7,0,7.9,0,9v10
-          c0,1.1,0.9,2,2,2h12c1.1,0,2-0.9,2-2V9C16,7.9,15.1,7,14,7z M14,19H2V9h12V19z"/>
-        <circle cx="8" cy="14" r="2"/>
-      </svg>
-    </div>
+    <div class="info"></div>
+    <div class="bulb"></div>
+    <div class="eye"></div>
+    <div class="unlock"></div>
   </div>
 </body>
 </html>
