--- a/svg/fitness/index.html
+++ b/svg/fitness/index.html
@@ -7,45 +7,12 @@
 </head>
 <body>
   <div class="fitness">
-    <div class="man">
-      <svg width="40" viewBox="0 0 557 673">
-        <path d="M552,610L394,281c-8-16-15-32-23-49l-4-8l5,0c6,0,12,0,19,0c2,0,2,0,3,2c15,20,30,39,45,59
-          l9,12c8,11,19,16,30,16c7,0,14-2,20-7c17-12,20-32,8-51c-13-21-27-43-40-64l-19-31
-          c-8-12-19-19-33-21l-9-1c-29-4-58-9-87-14c-38-7-71-1-101,18c-14,9-30,18-45,26
-          c-10,5-19,11-29,16c-3,2-4,2-5,2c-1,0-2,0-4-1c-26-10-53-20-79-30l-8-3C45,150,40,149,35,149
-          c-15,0-27,8-32,21c-7,18,0,38,17,47c30,16,60,31,89,47l13,7c14,7,28,8,42,1c7-3,14-6,21-9
-          c7-3,14-6,21-9c16,27,33,53,49,79l15,23c-14,3-28,5-41,8l-40,8c-21,4-35,17-41,36
-          c-6,20-1,39,15,52c22,20,43,40,64,59c15,14,30,27,44,41c18,17,45,17,62,0c16-17,16-42-1-60
-          c-9-10-18-20-27-29l-8-9c13-1,26-2,38-4c1,0,2,0,3,0c0,0,1,0,2,3c41,57,81,114,122,171l14,19
-          c9,13,22,20,36,20c7,0,15-2,21-6C556,655,562,632,552,610z M522,644c-7,4-16,2-22-6l-14-19
-          c-41-57-82-114-122-171c-5-7-12-14-25-14c-2,0-4,0-6,0c-14,2-28,3-43,4c-7,1-13,1-20,2
-          c-5,0-9,4-11,8c-2,5-1,10,2,14l3,4c2,2,4,4,5,6l18,20c9,10,18,19,27,29
-          c7,8,8,17,2,23c-6,6-16,6-23-1c-15-14-30-27-44-41c-22-20-43-40-65-60c-8-7-10-15-7-25
-          c3-9,9-15,20-17l40-8c17-3,35-7,52-10c2,0,5-1,7-2l2-1c4-1,7-4,8-8c2-4,1-8,0-11
-          l-1-2c-1-2-2-4-3-6L280,320c-17-27-33-53-50-80c-2-3-8-13-20-13c-4,0-8,1-12,3
-          c-7,3-14,6-22,9c-7,3-15,6-22,9c-6,3-12,3-18-1L122,240c-30-15-60-31-89-47
-          c-5-3-7-7-5-12c2-4,6-4,7-4c2,0,3,0,5,1l8,3C74,190,100,200,126,210c11,4,21,4,32-3
-          c9-5,19-11,28-16c15-8,31-17,46-27c24-15,50-20,81-14c29,5,59,10,87,14l9,1c6,1,10,4,14,9
-          l19,31c13,21,27,42,40,64c6,9,1,13-1,14c-5,3-9,2-13-4L460,268c-15-19-30-39-44-59
-          c-6-9-15-13-25-13c0,0-1,0-1,0c-6,0-11,0-17,0l-27,0c-5,0-9,2-12,6c-2,4-3,9-1,13l13,28
-          c8,17,16,33,23,49l158,329C531,631,529,639,522,644z"/>
-        <path d="M223,0c-17,0-32,6-44,18c-11,12-18,27-18,44c0,34,28,61,61,61h0c34,0,61-28,61-62
-          C285,27,258,0,223,0z M224,96L224,96c-19,0-34-15-34-34c0-9,3-18,10-24c6-6,15-10,24-10
-          c19,0,34,15,34,34C258,81,243,96,224,96z"/>
-      </svg>
-    </div>
+    <div class="man"></div>
     <div class="info">
       <div class="speed">
         <span class="speed1">6</span><span class="speed2">7</span><span class="mph">mph</span>
       </div>
-      <div class="heart">
-        <svg width="20" viewBox="0 0 137 120">
-        <path d="M96,0C83,0,74,7,69,12C63,7,55,0,41,0C16,0,0,23,0,44c0,30,58,71,64,75C66,120,67,120,69,120
-          c1,0,3,0,4-1c7-5,64-45,64-75C137,23,121,0,96,0z M75,28c0-1,6-14,21-14c17,0,26,17,26,29
-          c0,15-28,42-54,60C47,88,15,60,15,44c0-12,9-29,26-29c15,0,21,13,21,14c1,3,4,5,7,5
-          C72,33,74,31,75,28z"/>
-        </svg>
-      </div>
+      <div class="heart"></div>
       <div class="dist">
         <span class="digits">82<span class="digit">0 1 2 3 4 5 6 7 8 9</span><span class="digit">0 1 2 3 4 5 6 7 8 9</span></span>
       </div>
