Add auth and transport to index page

--- a/svg/index.html
+++ b/svg/index.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="profiles/profiles.css">
   <link rel="stylesheet" href="sharing/sharing.css">
   <link rel="stylesheet" href="fitness/fitness.css">
+  <link rel="stylesheet" href="auth/auth.css">
+  <link rel="stylesheet" href="transport/transport.css">
   <style>
   .icons { display: flex; flex-wrap: wrap; justify-content: space-between; }
   .icons > div { font-size: 0.5em; flex-shrink: 0; }
@@ -26,6 +28,17 @@
       <div class="tie"></div>
       <div class="glass"></div>
       <div class="hat"></div>
+    </div>
+    <div class="auth">
+      <div class="fingerprint"></div>
+      <div class="ok"></div>
+      <div class="desktop"></div>
+      <div class="laptop"></div>
+      <div class="smartphone"></div>
+    </div>
+    <div class="transport">
+      <div class="tram"></div>
+      <div class="man in"></div>
     </div>
     <div class="fitness">
       <div class="man"></div>
