Add upgrade to index page

--- a/svg/index.html
+++ b/svg/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="fitness/fitness.css">
   <link rel="stylesheet" href="auth/auth.css">
   <link rel="stylesheet" href="transport/transport.css">
+  <link rel="stylesheet" href="upgrade/upgrade.css">
   <style>
   .icons { display: flex; flex-wrap: wrap; justify-content: space-between; }
   .icons > div { font-size: 0.5em; flex-shrink: 0; }
@@ -28,6 +29,39 @@
       <div class="tie"></div>
       <div class="glass"></div>
       <div class="hat"></div>
+    </div>
+    <div class="upgrade">
+      <div class="chip">
+        <div class="row">
+          <div class="leg"></div>
+          <div class="leg"></div>
+          <div class="leg"></div>
+          <div class="leg"></div>
+          <div class="leg"></div>
+        </div>
+        <div class="row">
+          <div class="leg"></div>
+          <div class="leg"></div>
+          <div class="leg"></div>
+          <div class="leg"></div>
+          <div class="leg"></div>
+        </div>
+        <div class="row">
+          <div class="leg"></div>
+          <div class="leg"></div>
+          <div class="leg"></div>
+          <div class="leg"></div>
+          <div class="leg"></div>
+        </div>
+        <div class="row">
+          <div class="leg"></div>
+          <div class="leg"></div>
+          <div class="leg"></div>
+          <div class="leg"></div>
+          <div class="leg"></div>
+        </div>
+        <div class="rotator"></div>
+      </div>
     </div>
     <div class="auth">
       <div class="fingerprint"></div>
