Add recognition to index page

--- a/svg/index.html
+++ b/svg/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="auth/auth.css">
   <link rel="stylesheet" href="transport/transport.css">
   <link rel="stylesheet" href="upgrade/upgrade.css">
+  <link rel="stylesheet" href="recognition/recognition.css">
   <style>
   .icons { display: flex; flex-wrap: wrap; justify-content: space-between; }
   .icons > div { font-size: 0.5em; flex-shrink: 0; }
@@ -73,6 +74,10 @@
     <div class="transport">
       <div class="tram"></div>
       <div class="man in"></div>
+    </div>
+    <div class="recognition">
+      <div class="hand"></div>
+      <div class="arrow"></div>
     </div>
     <div class="fitness">
       <div class="man"></div>
